
XX XXX 2022
Version 6.0.0-RC.5
======================================================================================================================
AllOverIt
  * Added AwaitableLock to complement ReadWriteLock for async scenarios (although it does not support re-entrant)
  * Deleted GetGenericArguments() - same as type.GenericTypeArguments

AllOverIt.Filtering
  * Renamed IgnoreNullFilterValues to IgnoreDefaultFilterValues so default constructed In and NotIn objects are
    considered (internal null value as opposed to an empty list).


22 Aug 2022
Version 6.0.0-RC.4
======================================================================================================================
All - Added source linking to all packages

AllOverIt
  * Updated binary serialization to include extension methods for read/write DateTime and TimeSpan
  * Added CreateToLowerCallExpression() and CreateToUpperCallExpression() to StringExpressionUtils
  * Improvements to LinqSpecificationVisitor output
  * Removed unnecessary return type from IBreadcrumbs.Add()
  * Updates to IReadWriteLock
  * Added SynchronizedCache - TESTS PENDING
  * Added NullBreadcrumbs

AllOverIt.Aws.AppSync.Client
  * Updated to use IHttpClientFactory


31 Jul 2022
Version 6.0.0-RC.3
======================================================================================================================
AllOverIt
  * Internal reflection caching improvements
  * Added a deconstructor for nullable types
  * Added common type declarations (typeof())
  
AllOverIt.Filtering
  * Added more overloads to IFilterSpecificationBuilder to cater for combining IBasicFilterOperation (and IArrayFilterOperation)
    with IStringFilterOperation.
  * Renamed AsQueryString() to ToQueryString()

AllOverIt.Pagination
  * Renamed AddQueryPaginator() extension method to AddQueryPaginatorFactory()

AllOverIt.FixtureBase
  * Seed the Random in FixtureBase


21 Jul 2022
Version 6.0.0-RC.2